replace `ImmutableMap.of` by `Map.of`
It's available from Java 9, and it also returns an immutable map.